# orchestratia-agent

./: .gitignore  .mcp.json  CLAUDE.md  ORCHESTRATIA.md  README.md  cli.py  config.yaml.example  daemon.py  install.sh  orchestratia-agent.service  orchestratia_agent.spec  pyproject.toml  requirements.txt  setup.sh  uninstall.sh
.github/workflows/: build-windows.yml  bump-homebrew-tap.yml  ci.yml
agent-skills/claude/: SKILL.md
agent-skills/codex/: SKILL.md
agent-skills/gemini/: SKILL.md
agent-skills/hooks/: orchestratia-context.ps1  orchestratia-context.sh  orchestratia-notification.sh  orchestratia-pretooluse.ps1  orchestratia-pretooluse.sh  orchestratia-statusline.ps1  orchestratia-statusline.sh
claude-skill/: SKILL.md  orchestratia-context.sh  orchestratia-pretooluse.sh
orchestratia_agent/: __init__.py  __main__.py  agent_registry.py  claude_trust.py  cli.py  config.py  connect.py  conpty.py  context_meter.py  file_transfer.py  fs_handler.py  governance_hook.py  hub.py  logging_config.py  main.py  mcp_server.py  orchestrator_memory.py  pty_host.py  pty_host_launcher.py  s2s_tunnel.py  session.py  session_base.py  session_posix.py  session_pty_host.py  session_windows.py  ssh_setup.py  system.py  tls.py  tmux.py  tunnel.py  win_input_helper.py  worker_preflight.py  workspace_scan.py
orchestratia_agent/codebase_scanner/: __init__.py  git_analyzer.py  graph_builder.py  js_analyzer.py  mermaid_generator.py  metrics.py  python_analyzer.py
scripts/: diag.sh  install-linux.sh  install-macos.sh  install-windows.ps1  uninstall-windows.ps1
scripts/windows-wrappers/: orchestratia-agent.cmd  orchestratia-agent.ps1  orchestratia.cmd  orchestratia.ps1
