[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestratia-agent"
version = "0.2.0"
description = "Agent daemon for Orchestratia - AI agent orchestration platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "websockets>=14.0",
    "pyyaml>=6.0",
    "psutil>=6.0",
    "pyte>=0.8.2",
    "pywinpty>=2.0.10; sys_platform == 'win32'",
]

[project.scripts]
orchestratia-agent = "orchestratia_agent.main:entry_point"
orchestratia = "orchestratia_agent.cli:main"

[tool.setuptools.packages.find]
include = ["orchestratia_agent*"]
