[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestratia-agent"
version = "0.9.2"
description = "Agent daemon and CLI for Orchestratia - AI agent orchestration platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Kumarim Lab", email = "dev@orchestratia.com"},
]
keywords = [
    "ai", "agent", "orchestration", "claude", "coding-agent",
    "task-management", "multi-agent", "devops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.28.0",
    "websockets>=14.0",
    "pyyaml>=6.0",
    "psutil>=6.0",
    "pyte>=0.8.2",
    # pywinpty replaced by native ConPTY via ctypes (conpty.py)
    # "pywinpty>=2.0.10; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[project.urls]
Homepage = "https://orchestratia.com"
Documentation = "https://orchestratia.com/docs/agent-guide"
Repository = "https://github.com/kumarimlab/orchestratia-agent"
Issues = "https://github.com/kumarimlab/orchestratia-agent/issues"

[project.scripts]
orchestratia-agent = "orchestratia_agent.main:entry_point"
orchestratia = "orchestratia_agent.cli:main"
orchestratia-connect = "orchestratia_agent.connect:main"

[tool.setuptools.packages.find]
include = ["orchestratia_agent*"]
